Signed-off-by: Hisnty <hisnty@gmail.com>

--- a/_posts/2025-03-30-6.md
+++ b/_posts/2025-03-30-6.md
@@ -2,6 +2,8 @@
 title: "마인크래프트 모드제작 #5: 툴팁과 아이템 데이터"
 layout: post
 ---
+![Image](https://github.com/user-attachments/assets/1911e88f-995d-4011-97a0-91616a2bfaf5)
+
 
 ![Image](https://github.com/user-attachments/assets/a0688108-8e53-41d9-a9d0-4a556e7485fb)
 
